<resources>
    <string name="APP_NAME">LensAlert</string>
    <string name="NOTIFICATION_DESCRIPTION">Have you had your contact lenses today?</string>
    <string name="YES_BUTTON">YES</string>
    <string name="HALF_BUTTON">HALF</string>
    <string name="NO_BUTTON">NO</string>
    <string name="LENSES_WORN_OUT">Your lenses are worn out. You should replace them!</string>
    <string name="NOTIFICATION">Notification</string>
    <string name="SETTINGS">Settings</string>
    <string name="ABOUT">About</string>
    <string name="SAVE">SAVE</string>
    <string name="PICK_TIME">Pick time</string>
    <string name="SETTINGS_SAVED">Settings saved</string>
    <string name="TIME">Time:</string>
    <string name="TIME_SETTINGS_DESCRIPTION">Everyday a prompt notification will be shown at set time:</string>
    <string name="LENS_LIFE_SPAN_DAYS">Lens life span (days):</string>
    <string name="ENABLE">Enable</string>
    <string name="NOTIFICATION_ICON">Notification icon</string>
    <string name="LENS_LIFE_SPAN">Contact lens life span:</string>
    <string name="PROGRESS">%1$s out of %2$d days</string>
    <string name="CANCEL">Cancel</string>
    <string name="SET">Set now</string>
    <string name="CLEAR">New lenses</string>
    <string name="CHOOSE">Choose wear</string>
    <string name="WARNING">WARNING, you have already set info today at %s!</string>
    <string name="CLEAR_PROMPT">Are you sure you want to clear your lens info?</string>
    <string name="EXIT">Exit</string>
    <string name="INFO">Info</string>
    <string name="CHOSEN">chosen</string>
    <string name="CHOOSE_PROGRESS">Set your lens wear:</string>
    <string name="OK" translatable="false">OK</string>
    <string name="REFRESH">Refresh</string>
    <string name="SYNCED">Sync successful</string>
    <string name="FAILED_SYNC">Failed to sync settings</string>
    <string name="SIGN_OUT">Sign out</string>
    <string name="LOG_IN_TO_SYNC">Log in to sync settings</string>
    <string name="SIGNED_IN_EMAIL">Signed in as %s</string>
    <string name="NO_INTERNET">No internet connection</string>
    <string name="FIRST_USE">First use: %s</string>
    <string name="BAD_RESPONSE_ERROR">Unable to connect to server.</string>
</resources>